gen/GlwssaParser.java
// Generated from /Users/georgepapachristodoulou/Documents/Programming/Java/IntelliJ Project/GlwssaPlusPlus/src/Glwssa.g4 by ANTLR 4.13.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class GlwssaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, PROGRAM_KW=5, VARS_KW=6, START_KW=7, END_KW=8, 
		PRINT_KW=9, READ_KW=10, IF_KW=11, THEN_KW=12, ELSE_IF_KW=13, ELSE_KW=14, 
		END_IF_KW=15, SELECT_KW=16, CASE_KW=17, END_SELECT_KW=18, WHILE_KW=19, 
		DO_KW=20, END_LOOP_KW=21, START_LOOP_KW=22, UNTIL_KW=23, START_FOR_KW=24, 
		FROM_KW=25, TO_KW=26, STEP_KW=27, FUNCTION_KW=28, END_FUNCTION_KW=29, 
		PROCEDURE_KW=30, END_PROCEDURE_KW=31, CALL_KW=32, TYPE_KW=33, RETURN_TYPE_KW=34, 
		TRUE_KW=35, FALSE_KW=36, ASSIGN=37, PLUS=38, MINUS=39, MULT=40, SLASH=41, 
		DIV_KW=42, MOD_KW=43, EQ=44, NEQ=45, LT=46, GT=47, LTE=48, GTE=49, ID=50, 
		NUMBER=51, STRING=52, COMMENT=53, WS=54, LEFT_BRACKET=55, RIGHT_BRACKET=56;
	public static final int
		RULE_file = 0, RULE_program = 1, RULE_subprogram = 2, RULE_function = 3, 
		RULE_procedure = 4, RULE_param_list = 5, RULE_declarations = 6, RULE_var_decl = 7, 
		RULE_var_def = 8, RULE_statement = 9, RULE_assignment = 10, RULE_print_stmnt = 11, 
		RULE_print_item = 12, RULE_read_stmnt = 13, RULE_if_stmnt = 14, RULE_else_if_block = 15, 
		RULE_else_block = 16, RULE_select_stmnt = 17, RULE_case_block = 18, RULE_default_block = 19, 
		RULE_while_stmnt = 20, RULE_do_while_stmnt = 21, RULE_for_loop_stmnt = 22, 
		RULE_array_access = 23, RULE_procedure_call_statement = 24, RULE_expr = 25;
	private static String[] makeRuleNames() {
		return new String[] {
			"file", "program", "subprogram", "function", "procedure", "param_list", 
			"declarations", "var_decl", "var_def", "statement", "assignment", "print_stmnt", 
			"print_item", "read_stmnt", "if_stmnt", "else_if_block", "else_block", 
			"select_stmnt", "case_block", "default_block", "while_stmnt", "do_while_stmnt", 
			"for_loop_stmnt", "array_access", "procedure_call_statement", "expr"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "':'", "','", "'\\u03A0\\u03A1\\u039F\\u0393\\u03A1\\u0391\\u039C\\u039C\\u0391'", 
			"'\\u039C\\u0395\\u03A4\\u0391\\u0392\\u039B\\u0397\\u03A4\\u0395\\u03A3'", 
			"'\\u0391\\u03A1\\u03A7\\u0397'", "'\\u03A4\\u0395\\u039B\\u039F\\u03A3_\\u03A0\\u03A1\\u039F\\u0393\\u03A1\\u0391\\u039C\\u039C\\u0391\\u03A4\\u039F\\u03A3'", 
			"'\\u0393\\u03A1\\u0391\\u03A8\\u0395'", "'\\u0394\\u0399\\u0391\\u0392\\u0391\\u03A3\\u0395'", 
			"'\\u0391\\u039D'", "'\\u03A4\\u039F\\u03A4\\u0395'", "'\\u0391\\u039B\\u039B\\u0399\\u03A9\\u03A3_\\u0391\\u039D'", 
			"'\\u0391\\u039B\\u039B\\u0399\\u03A9\\u03A3'", "'\\u03A4\\u0395\\u039B\\u039F\\u03A3_\\u0391\\u039D'", 
			"'\\u0395\\u03A0\\u0399\\u039B\\u0395\\u039E\\u0395'", "'\\u03A0\\u0395\\u03A1\\u0399\\u03A0\\u03A4\\u03A9\\u03A3\\u0397'", 
			"'\\u03A4\\u0395\\u039B\\u039F\\u03A3_\\u0395\\u03A0\\u0399\\u039B\\u039F\\u0393\\u03A9\\u039D'", 
			"'\\u039F\\u03A3\\u039F'", "'\\u0395\\u03A0\\u0391\\u039D\\u0391\\u039B\\u0391\\u0392\\u0395'", 
			"'\\u03A4\\u0395\\u039B\\u039F\\u03A3_\\u0395\\u03A0\\u0391\\u039D\\u0391\\u039B\\u0397\\u03A8\\u0397\\u03A3'", 
			"'\\u0391\\u03A1\\u03A7\\u0397_\\u0395\\u03A0\\u0391\\u039D\\u0391\\u039B\\u0397\\u03A8\\u0397\\u03A3'", 
			"'\\u039C\\u0395\\u03A7\\u03A1\\u0399\\u03A3_\\u039F\\u03A4\\u039F\\u03A5'", 
			"'\\u0393\\u0399\\u0391'", "'\\u0391\\u03A0\\u039F'", "'\\u039C\\u0395\\u03A7\\u03A1\\u0399'", 
			"'\\u039C\\u0395_\\u0392\\u0397\\u039C\\u0391'", "'\\u03A3\\u03A5\\u039D\\u0391\\u03A1\\u03A4\\u0397\\u03A3\\u0397'", 
			"'\\u03A4\\u0395\\u039B\\u039F\\u03A3_\\u03A3\\u03A5\\u039D\\u0391\\u03A1\\u03A4\\u0397\\u03A3\\u0397\\u03A3'", 
			"'\\u0394\\u0399\\u0391\\u0394\\u0399\\u039A\\u0391\\u03A3\\u0399\\u0391'", 
			"'\\u03A4\\u0395\\u039B\\u039F\\u03A3_\\u0394\\u0399\\u0391\\u0394\\u0399\\u039A\\u0391\\u03A3\\u0399\\u0391\\u03A3'", 
			"'\\u039A\\u0391\\u039B\\u0395\\u03A3\\u0395'", null, null, "'\\u0391\\u039B\\u0397\\u0398\\u0397\\u03A3'", 
			"'\\u03A8\\u0395\\u03A5\\u0394\\u0397\\u03A3'", "'<-'", "'+'", "'-'", 
			"'*'", "'/'", "'DIV'", "'MOD'", "'='", "'<>'", "'<'", "'>'", "'<='", 
			"'>='", null, null, null, null, null, "'['", "']'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, "PROGRAM_KW", "VARS_KW", "START_KW", "END_KW", 
			"PRINT_KW", "READ_KW", "IF_KW", "THEN_KW", "ELSE_IF_KW", "ELSE_KW", "END_IF_KW", 
			"SELECT_KW", "CASE_KW", "END_SELECT_KW", "WHILE_KW", "DO_KW", "END_LOOP_KW", 
			"START_LOOP_KW", "UNTIL_KW", "START_FOR_KW", "FROM_KW", "TO_KW", "STEP_KW", 
			"FUNCTION_KW", "END_FUNCTION_KW", "PROCEDURE_KW", "END_PROCEDURE_KW", 
			"CALL_KW", "TYPE_KW", "RETURN_TYPE_KW", "TRUE_KW", "FALSE_KW", "ASSIGN", 
			"PLUS", "MINUS", "MULT", "SLASH", "DIV_KW", "MOD_KW", "EQ", "NEQ", "LT", 
			"GT", "LTE", "GTE", "ID", "NUMBER", "STRING", "COMMENT", "WS", "LEFT_BRACKET", 
			"RIGHT_BRACKET"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Glwssa.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GlwssaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FileContext extends ParserRuleContext {
		public ProgramContext program() {
			return getRuleContext(ProgramContext.class,0);
		}
		public TerminalNode EOF() { return getToken(GlwssaParser.EOF, 0); }
		public List<SubprogramContext> subprogram() {
			return getRuleContexts(SubprogramContext.class);
		}
		public SubprogramContext subprogram(int i) {
			return getRuleContext(SubprogramContext.class,i);
		}
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GlwssaListener ) ((GlwssaListener)listener).enterFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GlwssaListener ) ((GlwssaListener)listener).exitFile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GlwssaVisitor ) return ((GlwssaVisitor<? extends T>)visitor).visitFile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_file);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			program();
			setState(56);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==FUNCTION_KW || _la==PROCEDURE_KW) {
				{
				{
				setState(53);
				subprogram();
				}
				}
				setState(58);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(59);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode PROGRAM_KW() { return getToken(GlwssaParser.PROGRAM_KW, 0); }
		public TerminalNode ID() { return getToken(GlwssaParser.ID, 0); }
		public TerminalNode START_KW() { return getToken(GlwssaParser.START_KW, 0); }
		public TerminalNode END_KW() { return getToken(GlwssaParser.END_KW, 0); }
		public DeclarationsContext declarations() {
			return getRuleContext(DeclarationsContext.class,0);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GlwssaListener ) ((GlwssaListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GlwssaListener ) ((GlwssaListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GlwssaVisitor ) return ((GlwssaVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			match(PROGRAM_KW);
			setState(62);
			match(ID);
			setState(64);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==VARS_KW) {
				{
				setState(63);
				declarations();
				}
			}

			setState(66);
			match(START_KW);
			setState(70);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1125904223374848L) != 0)) {
				{
				{
				setState(67);
				statement();
				}
				}
				setState(72);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(73);
			match(END_KW);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SubprogramContext extends ParserRuleContext {
		public FunctionContext function() {
			return getRuleContext(FunctionContext.class,0);
		}
		public ProcedureContext procedure() {
			return getRuleContext(ProcedureContext.class,0);
		}
		public SubprogramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subprogram; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GlwssaListener ) ((GlwssaListener)listener).enterSubprogram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GlwssaListener ) ((GlwssaListener)listener).exitSubprogram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GlwssaVisitor ) return ((GlwssaVisitor<? extends T>)visitor).visitSubprogram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SubprogramContext subprogram() throws RecognitionException {
		SubprogramContext _localctx = new SubprogramContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_subprogram);
		try {
			setState(77);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case FUNCTION_KW:
				enterOuterAlt(_localctx, 1);
				{
				setState(75);
				function();
				}
				break;
			case PROCEDURE_KW:
				enterOuterAlt(_localctx, 2);
				{
				setState(76);
				procedure();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionContext extends ParserRuleContext {
		public TerminalNode FUNCTION_KW() { return getToken(GlwssaParser.FUNCTION_KW, 0); }
		public TerminalNode ID() { return getToken(GlwssaParser.ID, 0); }
		public TerminalNode RETURN_TYPE_KW() { return getToken(GlwssaParser.RETURN_TYPE_KW, 0); }
		public DeclarationsContext declarations() {
			return getRuleContext(DeclarationsContext.class,0);
		}
		public TerminalNode START_KW() { return getToken(GlwssaParser.START_KW, 0); }
		public TerminalNode END_FUNCTION_KW() { return getToken(GlwssaParser.END_FUNCTION_KW, 0); }
		public Param_listContext param_list() {
			return getRuleContext(Param_listContext.class,0);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public FunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GlwssaListener ) ((GlwssaListener)listener).enterFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GlwssaListener ) ((GlwssaListener)listener).exitFunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GlwssaVisitor ) return ((GlwssaVisitor<? extends T>)visitor).visitFunction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionContext function() throws RecognitionException {
		FunctionContext _localctx = new FunctionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_function);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			match(FUNCTION_KW);
			setState(80);
			match(ID);
			setState(81);
			match(T__0);
			setState(83);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(82);
				param_list();
				}
			}

			setState(85);
			match(T__1);
			setState(86);
			match(T__2);
			setState(87);
			match(RETURN_TYPE_KW);
			setState(88);
			declarations();
			setState(89);
			match(START_KW);
			setState(93);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1125904223374848L) != 0)) {
				{
				{
				setState(90);
				statement();
				}
				}
				setState(95);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(96);
			match(END_FUNCTION_KW);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProcedureContext extends ParserRuleContext {
		public TerminalNode PROCEDURE_KW() { return getToken(GlwssaParser.PROCEDURE_KW, 0); }
		public TerminalNode ID() { return getToken(GlwssaParser.ID, 0); }
		public DeclarationsContext declarations() {
			return getRuleContext(DeclarationsContext.class,0);
		}
		public TerminalNode START_KW() { return getToken(GlwssaParser.START_KW, 0); }
		public TerminalNode END_PROCEDURE_KW() { return getToken(GlwssaParser.END_PROCEDURE_KW, 0); }
		public Param_listContext param_list() {
			return getRuleContext(Param_listContext.class,0);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProcedureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_procedure; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GlwssaListener ) ((GlwssaListener)listener).enterProcedure(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GlwssaListener ) ((GlwssaListener)listener).exitProcedure(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GlwssaVisitor ) return ((GlwssaVisitor<? extends T>)visitor).visitProcedure(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProcedureContext procedure() throws RecognitionException {
		ProcedureContext _localctx = new ProcedureContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_procedure);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			match(PROCEDURE_KW);
			setState(99);
			match(ID);
			setState(100);
			match(T__0);
			setState(102);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(101);
				param_list();
				}
			}

			setState(104);
			match(T__1);
			setState(105);
			declarations();
			setState(106);
			match(START_KW);
			setState(110);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1125904223374848L) != 0)) {
				{
				{
				setState(107);
				statement();
				}
				}
				setState(112);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(113);
			match(END_PROCEDURE_KW);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Param_listContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(GlwssaParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(GlwssaParser.ID, i);
		}
		public Param_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GlwssaListener ) ((GlwssaListener)listener).enterParam_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GlwssaListener ) ((GlwssaListener)listener).exitParam_list(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GlwssaVisitor ) return ((GlwssaVisitor<? extends T>)visitor).visitParam_list(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Param_listContext param_list() throws RecognitionException {
		Param_listContext _localctx = new Param_listContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_param_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			match(ID);
			setState(120);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__3) {
				{
				{
				setState(116);
				match(T__3);
				setState(117);
				match(ID);
				}
				}
				setState(122);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclarationsContext extends ParserRuleContext {
		public TerminalNode VARS_KW() { return getToken(GlwssaParser.VARS_KW, 0); }
		public List<Var_declContext> var_decl() {
			return getRuleContexts(Var_declContext.class);
		}
		public Var_declContext var_decl(int i) {
			return getRuleContext(Var_declContext.class,i);
		}
		public DeclarationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarations; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GlwssaListener ) ((GlwssaListener)listener).enterDeclarations(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GlwssaListener ) ((GlwssaListener)listener).exitDeclarations(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GlwssaVisitor ) return ((GlwssaVisitor<? extends T>)visitor).visitDeclarations(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationsContext declarations() throws RecognitionException {
		DeclarationsContext _localctx = new DeclarationsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_declarations);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			match(VARS_KW);
			setState(127);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TYPE_KW) {
				{
				{
				setState(124);
				var_decl();
				}
				}
				setState(129);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Var_declContext extends ParserRuleContext {
		public TerminalNode TYPE_KW() { return getToken(GlwssaParser.TYPE_KW, 0); }
		public List<Var_defContext> var_def() {
			return getRuleContexts(Var_defContext.class);
		}
		public Var_defContext var_def(int i) {
			return getRuleContext(Var_defContext.class,i);
		}
		public Var_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GlwssaListener ) ((GlwssaListener)listener).enterVar_decl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GlwssaListener ) ((GlwssaListener)listener).exitVar_decl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GlwssaVisitor ) return ((GlwssaVisitor<? extends T>)visitor).visitVar_decl(this);
			else return visitor.visitChildren(this);
		}
	}
